Thu May  1 07:03:00 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:

          Added unregister notification support.

        * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
        * DevGuideExamples/DCPS/Messenger/Writer.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:

          Removed dispose notification test code since a new test was
          added for notification test.

        * bin/dcps_tests.lst:
        
          Added NotifyTest test.

        * tests/DCPS/NotifyTest/DataReaderListener.h:
        * tests/DCPS/NotifyTest/DataReaderListener.cpp:
        * tests/DCPS/NotifyTest/Messenger.idl:
        * tests/DCPS/NotifyTest/NotifyTest.mpc:
        * tests/DCPS/NotifyTest/Writer.h:
        * tests/DCPS/NotifyTest/Writer.cpp:
        * tests/DCPS/NotifyTest/domain_ids:
        * tests/DCPS/NotifyTest/pub.ini:
        * tests/DCPS/NotifyTest/publisher.cpp:
        * tests/DCPS/NotifyTest/run_test.pl:
        * tests/DCPS/NotifyTest/sub.ini:
        * tests/DCPS/NotifyTest/subscriber.cpp:
        * tests/DCPS/NotifyTest/tcp.conf:

          Added dispose and unregister notification test.

Tue Apr 29 19:41:12 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.h:
        * dds/DCPS/TransientDataDurabilityCache.cpp:
        * dds/DCPS/TransientDataDurabilityCache.h:

          Rewrote interface and implementation to expect unsent data to be
          inserted into the cache when a DataWriter is destroyed.

          Implemented DURABILITY_SERVICE support.

          Implemented service_cleanup_delay support.

          Addressed a problem where marshaled sample message containing a
          header ended up with an additional header.
